[package]
name = "usync"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["kprotty"]
readme = "README.md"
homepage = "https://github.com/kprotty"
documentation = "https://docs.rs/usync"
description = "fast, drop-in, synchronization primitives"
categories = ["concurrency", "data-structures"]
keywords = [
    "atomic", "lock", 
    "mutex", "rwlock", "condvar", "once",
    "parallel", "parallelism", "thread", "concurrent", "performance",
]

[features]
send_guard = []
hardware-lock-elision = []

[dependencies]
lock_api = "0.4"
