[package]
name = "benchmark"
version = "0.0.0"
edition = "2018"
publish = false
license = "Apache-2.0"
authors = ["kprotty"]

[features]
default = []
loom = ["libloom", "usync/loom"]

[dependencies]
libloom = { version = "0.3", optional = true, package = "loom" }
parking_lot = "0.11"
simple-mutex = "1.1"
usync = { path = "../" }

[[bench]]
name = "mutex"
path = "./mutex/mod.rs"
harness = false
